<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>windspigot</artifactId>
	<packaging>jar</packaging>
	<version>1.8.8-R0.2-SNAPSHOT</version>
	<name>WindSpigot</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<api.version>unknown</api.version>
		<junit.version>4.13.2</junit.version>
		<buildtag.prefix>git-Bukkit-</buildtag.prefix>
		<buildtag.suffix />
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<parent>
		<groupId>ga.windpvp.windspigot</groupId>
		<artifactId>parent</artifactId>
		<version>dev-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<dependencies>
		<dependency>
			<groupId>ga.windpvp.windspigot</groupId>
			<artifactId>api</artifactId>
			<version>${project.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.1.68.Final</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>

		<dependency>
			<groupId>net.sf.trove4j</groupId>
			<artifactId>trove4j</artifactId>
			<version>3.0.3</version>
		</dependency>
		
		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>fastutil</artifactId>
			<version>8.5.6</version>
		</dependency>
		
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>minecraft-server</artifactId>
			<version>1.8.8-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>net.sf.jopt-simple</groupId>
			<artifactId>jopt-simple</artifactId>
			<version>3.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>jline</groupId>
			<artifactId>jline</artifactId>
			<version>2.12.1</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.7.2</version>
			<type>jar</type>
			<scope>runtime</scope>
		</dependency>
		
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.14</version>
			<type>jar</type>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.2</version> <!-- Paper - Update Log4j -->
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.36</version>
		</dependency>

		<!-- testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.10.19</version>
		</dependency>
		
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>com.eatthepath</groupId>
			<artifactId>fast-uuid</artifactId>
			<version>0.2.0</version>
		</dependency>
		
		<dependency>
			<groupId>com.velocitypowered</groupId>
			<artifactId>velocity-native</artifactId>
			<version>1.1.0-SNAPSHOT</version>
		</dependency>
		
		<dependency>
			<groupId>net.openhft</groupId>
			<artifactId>affinity</artifactId>
			<version>3.21ea83</version>
		</dependency>
		
		<dependency>
			<groupId>com.github.matejtymes</groupId>
			<artifactId>javafixes</artifactId>
			<version>1.3.6.1</version>
		</dependency>
		
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>3.21.0</version>
        </dependency>
        
        <!-- Kyori api -->
        <!-- https://mvnrepository.com/artifact/net.kyori/adventure-api -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-key</artifactId>
            <version>4.10.1</version>
        </dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>elmakers-repo</id>
			<url>https://maven.elmakers.com/repository/</url>
		</repository>
		<repository>
			<id>velocity-repo</id>
			<url>https://repo.velocitypowered.com/snapshots/</url>
		</repository>
	</repositories>

	<!-- This builds a completely 'ready to start' jar with all dependencies 
		inside -->
	<build>
		<finalName>WindSpigot-Server</finalName>
		<defaultGoal>install</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<finalName>WindSpigot</finalName>
					<forceCreation>true</forceCreation> <!-- Required to prevent shading the jar multiple times -->
					<archive>
						<manifestEntries>
							<Main-Class>org.bukkit.craftbukkit.Main</Main-Class>
							<Implementation-Title>CraftBukkit</Implementation-Title>
							<Implementation-Version>${describe}</Implementation-Version>
							<Implementation-Vendor>${maven.build.timestamp}</Implementation-Vendor>
							<Specification-Title>Bukkit</Specification-Title>
							<!-- I don't see why this is necessary but I'll leave it alone for 
								now -->
							<Specification-Version>${api.version}</Specification-Version>
							<Specification-Vendor>Bukkit Team</Specification-Vendor>
							<Multi-Release>true</Multi-Release> <!-- Paper - update log4j -->
						</manifestEntries>
						<manifestSections>
							<manifestSection>
								<name>net/bukkit/</name>
								<manifestEntries>
									<Sealed>true</Sealed>
								</manifestEntries>
							</manifestSection>
							<manifestSection>
								<name>com/bukkit/</name>
								<manifestEntries>
									<Sealed>true</Sealed>
								</manifestEntries>
							</manifestSection>
							<manifestSection>
								<name>org/bukkit/</name>
								<manifestEntries>
									<Sealed>true</Sealed>
								</manifestEntries>
							</manifestSection>
						</manifestSections>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<!-- Paper start - Update Log4j -->
							<filters>
								<filter>
									<artifact>org.spigotmc:minecraft-server:**</artifact>
									<excludes>
										<exclude>org/apache/logging/log4j/**</exclude>
									</excludes>
								</filter>
							</filters>
							<!-- Paper end - Update Log4j -->
							<relocations>
								<relocation>
									<pattern>joptsimple</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.joptsimple</shadedPattern>
								</relocation>
								<relocation>
									<pattern>jline</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.jline</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.ibex</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.org.ibex</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.gjt</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.org.gjt</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.bukkit.craftbukkit</pattern>
									<shadedPattern>org.bukkit.craftbukkit.v1_8_R3</shadedPattern>
									<excludes>
										<exclude>org.bukkit.craftbukkit.Main*</exclude>
									</excludes>
								</relocation>
								<relocation>
									<pattern>com.github.benmanes.caffeine</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.caffeine</shadedPattern>
								</relocation>
								<relocation>
									<pattern>javassist</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.javassist</shadedPattern>
								</relocation>
								<relocation>
									<pattern>net.minecraft.server</pattern>
									<shadedPattern>net.minecraft.server.v1_8_R3</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Gotta go after shade plugin -->
			<plugin>
				<groupId>net.md-5</groupId>
				<artifactId>specialsource-maven-plugin</artifactId>
				<version>1.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>remap</goal>
						</goals>
						<configuration>
							<srgIn>${project.basedir}/deprecation-mappings.csrg</srgIn>
							<accessIn>${project.basedir}/deprecation-mappings.at</accessIn>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M6</version>
				<configuration>
					<workingDirectory>${basedir}/target/test-server</workingDirectory>
					<excludes>
						<exclude>org/bukkit/craftbukkit/inventory/ItemStack*Test.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>